# efl

./: Makefile.am  configure.ac  meson.build  meson_options.txt
.ci/: build-efl-app.sh  ci-linux-build.sh
data/: Makefile.am
data/elementary/themes/edc/efl/: text.edc
header_checks/: meson.build
src/: Makefile.am  Makefile_Efl.am  Makefile_Efl_Mono.am  Makefile_Elementary.am  Makefile_Eolian.am  Makefile_Eolian_Cxx.am  Makefile_Evas.am  Makefile_Exactness.am
src/examples/elementary/: efl_ui_view_list_example_1.c  efl_ui_view_list_example_2.c  efl_ui_view_list_example_3.c
src/generic/evas/: meson.build
src/lib/ecore/: efl_io_buffered_stream.c  efl_io_buffered_stream.eo  efl_loop_fd.c  efl_loop_fd.eo  efl_thread.c  meson.build
src/lib/ecore_con/: efl_net_dialer_ssl.c  efl_net_dialer_ssl.eo  efl_net_dialer_websocket.c  efl_net_dialer_websocket.eo  efl_net_server_simple.c  efl_net_server_simple.eo  efl_net_server_ssl.c  efl_net_server_ssl.eo  efl_net_server_windows.c  efl_net_server_windows.eo
src/lib/ecore_evas/: ecore_evas.c
src/lib/ecore_wl2/: meson.build
src/lib/ecore_x/: meson.build
src/lib/edje/: edje_main.c  edje_part_invalid.c  edje_part_text.c  edje_util.c  efl_canvas_layout_part_invalid.eo  efl_canvas_layout_part_text.eo  meson.build
src/lib/efl/: Efl.h  meson.build
src/lib/efl/interfaces/: efl_interfaces_main.c  efl_text.eo  efl_text_annotate.eo  efl_text_format.eo  efl_text_markup.c  efl_text_markup.eo  efl_text_markup_mixin.c  efl_text_markup_mixin.eo  efl_text_markup_util.c  efl_text_markup_util.eo  efl_text_types.eot  meson.build
src/lib/eina/: eina_value.c  eina_vpath.c  meson.build
src/lib/eio/: meson.build
src/lib/elementary/: Elementary.h  efl_access.c  efl_ui_button.eo  efl_ui_focus_composition.c  efl_ui_focus_layer.c  efl_ui_focus_manager_calc.c  efl_ui_focus_manager_root_focus.c  efl_ui_internal_text_interactive.eo  efl_ui_layout.c  efl_ui_multibuttonentry.eo  efl_ui_text.c  efl_ui_text.eo  efl_ui_text_async.eo  efl_ui_view_list.c  efl_ui_widget.c  efl_ui_win.c  elc_ctxpopup.c  elc_fileselector.c  elc_fileselector_button.c  elc_fileselector_entry.c  elc_popup.c  elm_access.c  elm_config.c  elm_ctxpopup.eo  elm_ctxpopup_item.eo  elm_diskselector.eo  elm_diskselector_item.eo  elm_entry.c  elm_flipselector.eo  elm_focus_legacy.c  elm_gengrid.c  elm_gengrid.eo  elm_gengrid_item.eo  elm_genlist.c  elm_genlist.eo  elm_genlist_item.eo  elm_hoversel.eo  elm_index.eo  elm_interface_fileselector.eo  elm_interface_scrollable.eo  (+20 more)
src/lib/elput/: meson.build
src/lib/eo/: efl_future.c  efl_future.h  eo.c  eo_base_class.c  eo_private.h
src/lib/evas/: Evas_Eo.h  meson.build
src/lib/evas/canvas/: efl_canvas_text.eo  efl_canvas_text_async.eo  evas_main.c  evas_object_smart.c  evas_object_textblock.c  meson.build
src/lib/evas/filters/: meson.build
src/lib/evas/include/: meson.build
src/lib/evas_goal/: meson.build
src/lib/evas_pre/: meson.build
src/lib/evil/: meson.build
src/lib/exactness/: Exactness.h  unit.c
src/modules/ecore_evas/engines/wayland/: meson.build
src/modules/ecore_imf/: meson.build
src/modules/ecore_imf/scim/: meson.build
src/modules/emotion/gstreamer/: meson.build
src/modules/evas/: meson.build
src/modules/evas/engines/buffer/: meson.build
src/modules/evas/engines/drm/: meson.build
src/modules/evas/engines/gl_x11/: meson.build
src/modules/evas/engines/software_generic/: meson.build
src/modules/evas/engines/software_x11/: meson.build
src/modules/evas/engines/wayland_egl/: meson.build
src/modules/evas/engines/wayland_shm/: meson.build
src/modules/evas/image_loaders/: meson.build
src/modules/evas/image_savers/: meson.build
src/modules/evas/model_loaders/: meson.build
src/modules/evas/model_savers/: meson.build
src/modules/evas/vg_loaders/: meson.build
src/modules/evas/vg_savers/: meson.build
src/static_libs/vg_common/: meson.build
src/tests/ecore/: ecore_suite.c  meson.build
src/tests/ecore_con/: ecore_con_test_efl_net_ip_address.c
src/tests/efl/: efl_test_model_composite.c  efl_test_model_container.c
src/tests/efl_mono/: libefl_mono_native_test.c
src/tests/eina/: eina_test_vpath.c  meson.build
src/tests/eio/: eio_test_sentry.c
src/tests/elementary/: elm_suite.c  elm_test_atspi.c  elm_test_config.c  elm_test_focus.c  elm_test_focus_common.c  elm_test_focus_sub.c  meson.build
src/tests/eo/suite/: eo_test_general.c
src/tests/eolian/: meson.build
src/tests/exactness/: exactness_test.sh
src/wayland_protocol/: meson.build
